--- a/TwitterDemo/Podfile
+++ b/TwitterDemo/Podfile
@@ -8,6 +8,7 @@ target 'TwitterDemo' do
   # Pods for TwitterDemo
   pod 'AFNetworking', '3.0.0'
   pod 'BDBOAuth1Manager', '2.0.0'
+  pod 'MBProgressHUD'
 
   target 'TwitterDemoTests' do
     inherit! :search_paths
